infra/kustomize/base/local/ingress-monitoring.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: monitoring.develop
      http:
        paths:
          - path: /?(.*)
            backend:
              serviceName: monitoring-grafana
              servicePort: 80
